--- a/bootstrap_theme/pendigital/factory_heroes.scss
+++ b/bootstrap_theme/pendigital/factory_heroes.scss
@@ -424,7 +424,32 @@
         background: linear-gradient($black 0%, rgba(0, 0, 0, 0.8) 40%, rgba(0, 0, 0, 0.8) 60%, $black 100%);
         opacity: 0.7;
     }
+
+    .pd-hero-6-cta {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+
+        .btn {
+            margin-top: 10px;
+        }
+    }
+
+    @media (min-width: 576px) {
+        .pd-hero-6-cta {
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+
+            .btn {
+                margin-left: 20px;
+                margin-top: 0px;
+            }
+        }
+    }
 }
+
+
 
 
 
