--- a/bootstrap_theme/pendigital/factory_mainNavs.scss
+++ b/bootstrap_theme/pendigital/factory_mainNavs.scss
@@ -723,12 +723,27 @@
                     transition: color 0.4s;
 
                     &:hover {
-                        color: darken(#ebebeb, 1);
+                        color: darken(#ebebeb, 10%);
                     }
 
                     &:focus {
                         outline: 2px dotted $white;
                         outline-offset: 5px;
+                    }
+                }
+
+                a.pd-pageActive-6 {
+                    background: $info;
+
+                    // border: 1px solid $white;
+                    border-radius: 4px;
+                    padding: 10px;
+                    color: $white;
+                    transition: background 0.4s;
+
+                    &:hover {
+                        color: $white!important;
+                        background: lighten($info, 4%);
                     }
                 }
 
@@ -840,16 +855,6 @@
         .pd-mainNav-mask-6 {
             display: none;
         }
-
-        // end of ul
-        a.pd-pageActive-6 {
-            background: $info;
-
-            // border: 1px solid $white;
-            border-radius: 4px;
-            padding: 10px;
-            color: $white;
-        }
     }
 
     .pd-mainNav-inner-6.open {
@@ -959,7 +964,7 @@
 
     .btn {
         text-transform: uppercase;
-        font-weight: 700;
+        font-weight: 700!important;
 
         // letter-spacing: 1.6px;
         font-size: 0.7rem!important;
@@ -980,14 +985,20 @@
 
     .btn-outline-light {
         &:hover {
-            background: #ebebeb;
-            border: darken($gray-300, 1);
-            color: #383838!important;
+            background: $primary;
+
+            // border: darken($gray-300, 1);
+            border: 1px solid darken($primary, 10%)!important;
+            color: $white!important;
             box-shadow: rgba(0,0,0,.1) 0 10px 15px -3px,rgba(0,0,0,.05) 0 4px 6px -2px;
         }
     }
 
     transition: all .2s;
+}
+
+.pd-mainNav-6.pd-mainNav-6-transparent {
+    background-color: transparent;
 }
 
 .pd-mainNav-6.pd-mainNav-6-inverted {
@@ -1005,7 +1016,7 @@
     }
 
     #logo {
-        content: url(/images/design-assets/fort-logo.svg);
+        content: url(/images/design-assets/logo-scissors.svg);
     }
 
     background-color: #f7f7f7;
@@ -1055,7 +1066,7 @@
 
 .pd-mainNav-6.pd-mainNav-6-inverted.open {
     #logo {
-        content: url(/images/design-assets/fort-logo-white.svg);
+        content: url(/images/design-assets/logo-scissors-white.svg);
     }
 
     .pd-mainNav-inner-6 {
@@ -1081,3 +1092,437 @@
 }
 
 // end pd-mainNav-6
+// start pd-mainNav-7
+.pd-mainNav-7-body-noScroll {
+    overflow: hidden;
+    height: 100vh;
+}
+
+.pd-mainNav-7 {
+    background-color: #f7f7f7;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    position: relative;
+    z-index: 1000;
+
+    a {
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
+    }
+
+    nav {
+        height: 100%;
+    }
+
+    .pd-mainNav-inner-7 {
+        display: none;
+        height: 100%;
+
+        @include media-breakpoint-up(md) {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-end;
+        }
+
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            align-items: center;
+
+            li {
+                a {
+                    padding-left: 16px;
+                    padding-right: 16px;
+                    margin-left: 5px;
+                    margin-right: 5px;
+                    text-transform: uppercase;
+                    font-weight: 400;
+                    text-decoration: none;
+                    font-size: 0.8rem;
+                    color: #222222;
+                    transition: color 0.4s;
+
+                    &:hover {
+                        color: lighten(#222222, 40%);
+                    }
+
+                    &:focus {
+                        outline: 2px dotted $primary;
+                        outline-offset: 5px;
+                    }
+                }
+
+                a.pd-pageActive-7 {
+                    background: $info;
+
+                    // border: 1px solid $white;
+                    border-radius: 4px;
+                    padding: 10px;
+                    color: $white;
+                    transition: background 0.4s;
+
+                    &:hover {
+                        color: $white!important;
+                        background: lighten($info, 4%);
+                    }
+                }
+
+                a.pd-dropdown-toggle {
+                    white-space: nowrap;
+                    display: inline-block;
+
+                    > * {
+                        pointer-events: none;
+                    }
+
+                    .pd-dropdown-caret {
+                        margin-left: 4px;
+                        content: url(/images/design-assets/icon-caret-primary.svg);
+                    }
+                }
+
+                ul.pd-dropdown-menu {
+                    position: absolute;
+                    display: none;
+                    flex-direction: column;
+                    border: none;
+                    background: $secondary;
+                    border-radius: 3px;
+                    padding-top: 8px;
+                    padding-bottom: 8px;
+                }
+
+                ul.pd-dropdown-menu.pd-show {
+                    display: block;
+                    flex-direction: column;
+                    position: absolute;
+                    inset: 0px auto auto 0px;
+                    margin: 0px;
+                    transform: translate3d(5px, 22px, 0px);
+                }
+
+                ul li {
+                    width: 100%;
+                }
+
+                ul li a.pd-dropdown-item {
+                    display: block;
+                    color: $white!important;
+                    margin-left: 0px!important;
+                    margin-right: 0px!important;
+                    font-size: 0.8rem;
+                    text-transform: uppercase;
+                    border-bottom: 1px solid $white;
+                    padding-top: 10px;
+                    padding-bottom: 10px;
+                    background-color: $secondary;
+                    transition: background-color 0.4s!important;
+
+                    &:hover {
+                        background-color: darken($secondary, 10);
+                    }
+
+                    &:focus {
+                        outline: 2px dotted $white!important;
+                        outline-offset: -6px!important;
+                    }
+                }
+
+                .pd-dropdown-item.pd-pageActive-7 {
+                    background: $info!important;
+                    border: none!important;
+                    border-radius: 0!important;
+                }
+            }
+
+            // end of li
+            li.pd-dropdown {
+                position: relative;
+            }
+        }
+
+        .pd-mainNav-social-7 {
+            display: flex;
+            width: 100%;
+            padding: 30px;
+            flex-direction: row;
+            justify-content: center;
+
+            a {
+                display: inline-block;
+
+                img {
+                    margin-left: 10px;
+                    margin-right: 10px;
+                    transition: transform 0.4s;
+
+                    &:hover {
+                        transform: scale(1.1);
+                    }
+
+                    &:focus {
+                        outline: 2px dotted $white;
+                        outline-offset: 2px;
+                    }
+                }
+            }
+
+            @include media-breakpoint-up(md) {
+                display: none;
+            }
+        }
+
+        .pd-mainNav-mask-7 {
+            display: none;
+        }
+
+        // end of ul
+    }
+
+    .pd-mainNav-inner-7.open {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        padding-top: 140px;
+        padding-bottom: 40px;
+
+        // background: linear-gradient(46.3deg,#5137c4 11.79%,#0071f6 144.33%);
+        background: $primary;
+        box-shadow: rgba(0,0,0,.1) 0 10px 15px -3px,rgba(0,0,0,.05) 0 4px 6px -2px;
+        overflow-y: scroll;
+
+        ul {
+            flex-direction: column;
+            align-items: flex-start;
+
+            li {
+                margin-top: 10px;
+                margin-bottom: 10px;
+                width: 100%;
+
+                a {
+                    font-size: 1.2rem;
+                    color: $white;
+
+                    &:hover {
+                        color: darken(#ebebeb, 1);
+                    }
+
+                    &:focus {
+                        outline: 2px dotted $white;
+                        outline-offset: 5px;
+                    }
+                }
+
+                a.pd-dropdown-toggle {
+                    .pd-dropdown-caret {
+                        content: url(/images/design-assets/icon-caret-white.svg);
+                    }
+                }
+
+                a.pd-pageActive-7 {
+                    padding-left: 16px;
+                    padding-right: 16px;
+                }
+
+                a.btn {
+                    width: 100%;
+                    font-size: 1rem!important;
+                }
+
+                ul.pd-dropdown-menu {
+                    position: static;
+                    transform: none;
+                    background: none;
+                    padding-top: 0px;
+                    padding-bottom: 0px;
+
+                    li {
+                        margin-top: 0px;
+                        margin-bottom: 0px;
+                        position: relative;
+
+                        a.pd-dropdown-item {
+                            background: none;
+                            position: relative;
+                            left: 30px;
+                        }
+                    }
+                }
+
+                ul.pd-dropdown-menu.pd-show {
+                    display: block;
+                }
+
+                ul.pd-dropdown-menu.pd-show.pd-collapsing {
+                    overflow: hidden;
+                    transition: height .35s;
+                    height: 0px;
+                }
+            }
+        }
+
+        .pd-mainNav-mask-7 {
+            display: block;
+            position: fixed;
+            opacity: 90%;
+            width: 100%;
+            background: $primary;
+            top: 0;
+            height: 78px;
+        }
+    }
+
+    .pd-mainNav-hamburger-7 {
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+
+        @include media-breakpoint-up(md) {
+            display: none;
+        }
+    }
+
+    .btn {
+        text-transform: uppercase;
+        font-weight: 700!important;
+
+        // letter-spacing: 1.6px;
+        font-size: 0.7rem!important;
+        padding: 12px 20px!important;
+        border-radius: 10px;
+        margin-left: 10px;
+        color: $primary!important;
+
+        &:focus {
+            box-shadow: none;
+        }
+    }
+
+    .btn-outline-primary {
+        border: 1px solid $primary!important;
+        transition: background .2s, border .2s, color .2s, box-shadow .2s!important;
+    }
+
+    .btn-outline-primary {
+        &:hover {
+            background: $primary;
+            border: darken($gray-300, 1);
+            color: $white!important;
+            box-shadow: rgba(0,0,0,.1) 0 10px 15px -3px,rgba(0,0,0,.05) 0 4px 6px -2px;
+        }
+    }
+
+    transition: all .2s;
+}
+
+.pd-mainNav-7.pd-mainNav-7-inverted {
+    box-shadow: 0 10px 5px -5px rgba(0,0,0,.15);
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 1000;
+
+    a {
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 5px;
+        }
+    }
+
+    #logo {
+        content: url(/images/design-assets/logo-scissors.svg);
+    }
+
+    background-color: #f7f7f7;
+
+    .pd-mainNav-inner-7 {
+        ul {
+            li {
+                a {
+                    color: #222222;
+
+                    &:hover {
+                        color: lighten(#222222, 50%);
+                    }
+
+                    &:focus {
+                        outline: 2px dotted $primary;
+                        outline-offset: 5px;
+                    }
+                }
+
+                a.pd-pageActive-7 {
+                    color: #ebebeb;
+                }
+            }
+        }
+
+        ul li a.pd-dropdown-toggle {
+            .pd-dropdown-caret {
+                content: url(/images/design-assets/icon-caret.svg);
+            }
+        }
+
+        .btn-outline-light {
+            border: 1px solid #222222!important;
+            color: #222222!important;
+            background: transparent;
+        }
+    }
+}
+
+.pd-mainNav-7.open {
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 1000;
+
+    #logo {
+        content: url(/images/design-assets/logo-scissors-white.svg);
+    }
+}
+
+.pd-mainNav-7.pd-mainNav-7-inverted.open {
+    #logo {
+        content: url(/images/design-assets/logo-scissors-white.svg);
+    }
+
+    .pd-mainNav-inner-7 {
+        ul {
+            li {
+                a {
+                    color: $white!important;
+                }
+            }
+        }
+
+        ul li a.pd-dropdown-toggle {
+            .pd-dropdown-caret {
+                content: url(/images/design-assets/icon-caret-white.svg);
+            }
+        }
+
+        .btn-outline-light {
+            border: 1px solid #ebebeb!important;
+            transition: background .2s, border .2s, color .2s, box-shadow .2s!important;
+        }
+    }
+}
+
+// end pd-mainNav-7
