Added new primary color in

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -19,11 +19,12 @@ $spacer: 1.5rem;
 
 // $primary: #433a6c; Fort Marketing
 // $primary: #007aff; old scissors blue
-$primary: #493bb3;
+// $primary: #493bb3; Or is this old scissors blue?
+$primary: #17A9E6;
 $primary-darker: #433a6c;
 
 // $secondary: #3fa9f5;
-$secondary: #17A9E6;
+$secondary: #493bb3;
 
 // $info: #b53027;
 $info: #00CC66;
