Changed color of backgrounds for nav children

--- a/bootstrap_theme/pendigital/factory_mainNavs.scss
+++ b/bootstrap_theme/pendigital/factory_mainNavs.scss
@@ -766,7 +766,7 @@
                     display: none;
                     flex-direction: column;
                     border: none;
-                    background: $secondary;
+                    background: $white;
                     border-radius: 3px;
                     padding-top: 8px;
                     padding-bottom: 8px;
@@ -787,19 +787,20 @@
 
                 ul li a.pd-dropdown-item {
                     display: block;
-                    color: $white!important;
+                    color: $primary;
                     margin-left: 0px!important;
                     margin-right: 0px!important;
                     font-size: 0.8rem;
                     text-transform: uppercase;
-                    border-bottom: 1px solid $white;
+                    border-bottom: 1px solid $primary;
                     padding-top: 10px;
                     padding-bottom: 10px;
-                    background-color: $secondary;
+                    background-color: $white;
                     transition: background-color 0.4s!important;
 
                     &:hover {
-                        background-color: darken($secondary, 10);
+                        background-color: $primary;
+                        color: $white!important;
                     }
 
                     &:focus {
@@ -922,10 +923,12 @@
                         margin-top: 0px;
                         margin-bottom: 0px;
                         position: relative;
+                        border-bottom: 1px solid $white;
 
                         a.pd-dropdown-item {
                             background: none;
                             position: relative;
+                            color: $white!important;
 
                             // left: 30px;
                         }
@@ -1198,7 +1201,7 @@
                     display: none;
                     flex-direction: column;
                     border: none;
-                    background: $secondary;
+                    background: $primary;
                     border-radius: 3px;
                     padding-top: 8px;
                     padding-bottom: 8px;
@@ -1227,11 +1230,12 @@
                     border-bottom: 1px solid $white;
                     padding-top: 10px;
                     padding-bottom: 10px;
-                    background-color: $secondary;
+                    background-color: $primary;
                     transition: background-color 0.4s!important;
 
                     &:hover {
-                        background-color: darken($secondary, 10);
+                        background-color: $white;
+                        color: $primary!important;
                     }
 
                     &:focus {
@@ -1312,6 +1316,10 @@
         ul {
             flex-direction: column;
             align-items: flex-start;
+            width: 100%;
+            text-align: center;
+            padding-left: 20px;
+            padding-right: 20px;
 
             li {
                 margin-top: 10px;
@@ -1363,7 +1371,8 @@
                         a.pd-dropdown-item {
                             background: none;
                             position: relative;
-                            left: 30px;
+
+                            // left: 30px;
                         }
                     }
                 }
