Added some new testimonials

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -43,5 +43,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_mainNavs";
 @import "pendigital/factory_hamburgers";
 @import "pendigital/factory_heroes";
+@import "pendigital/factory_testimonials";
 
 /* Custom CSS rules come here */
