--- a/bootstrap_theme/pendigital/factory_testimonials.scss
+++ b/bootstrap_theme/pendigital/factory_testimonials.scss
@@ -156,6 +156,7 @@
         position: relative;
         font-weight: 400;
         color: $white;
+        padding-top: 20px;
     }
 
     .pd-testimonial-3-quotation {
@@ -199,6 +200,120 @@
 }
 
 // end pd-testimonial-3
+// start pd-testimonial-4
+.pd-testimonial-4 {
+    background: linear-gradient(180deg, $primary, darken($primary, 10%));
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+    padding-top: 100px;
+    padding-bottom: 60px;
+    position: relative;
+
+    h2 {
+        font-weight: 700;
+        font-size: 0.7rem;
+        color: $white;
+        display: inline-block;
+        background: $info;
+        padding: 8px 14px;
+        border-radius: 50em;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-testimonial-4-quotes {
+        position: absolute;
+        z-index: 0;
+        opacity: 0.6;
+    }
+
+    .pd-testimonial-4-quotes.left {
+        top: -50px;
+        left: 0px;
+    }
+
+    .pd-testimonial-4-quotes.right {
+        right: 0px!important;
+        bottom: -50px;
+    }
+
+    .pd-testimonial-4-mainText {
+        z-index: 10;
+        position: relative;
+        font-weight: 400;
+        color: $white;
+        padding-top: 20px;
+    }
+
+    .pd-testimonial-4-quotation {
+        line-height: 2.2;
+        font-size: 1.2rem;
+        color: $white;
+    }
+
+    .pd-testimonial-4-author {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        z-index: 10;
+        position: relative;
+        color: $white;
+
+        @media (max-width: 575px) {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        img {
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+            box-shadow: 0 10px 5px -5px rgba(0,0,0,.15);
+        }
+    }
+
+    .pd-testimonial-4-link {
+        font-weight: 700;
+        color: $white;
+        text-decoration: none;
+        transition: color 0.4s;
+
+        &:hover {
+            text-decoration: none;
+            color: darken($white, 10%);
+        }
+    }
+
+    .pd-testimonial-4-image-wrapper {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        overflow: hidden;
+        height: 100%;
+        z-index: 0;
+        width: 100%;
+
+        img {
+            object-fit: cover;
+            object-position: center center;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    .pd-testimonial-4-overlay {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        height: 100%;
+        width: 100%;
+        background: linear-gradient(rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.6) 30%, rgba(0, 0, 0, 0.6) 70%, rgba(0, 0, 0, 0.7) 100%);
+    }
+}
+
+// end pd-testimonial-4
+
+
 
 
 
